指向非常數資料的常數指標

--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = "main.c\ \ \ -1.o" "bubble\ 1.o"
-LINKOBJ  = "main.c   -1.o" "bubble 1.o"
+OBJ      = main.o "bubble\ 2.o"
+LINKOBJ  = main.o "bubble 2.o"
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -24,8 +24,8 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CC) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-"main.c\ \ \ -1.o": main.c\ \ \ -1.c
-	$(CC) -c "main.c   -1.c" -o "main.c   -1.o" $(CFLAGS)
+main.o: main.c
+	$(CC) -c main.c -o main.o $(CFLAGS)
 
-"bubble\ 1.o": bubble\ 1.c
-	$(CC) -c "bubble 1.c" -o "bubble 1.o" $(CFLAGS)
+"bubble\ 2.o": bubble\ 2.c
+	$(CC) -c "bubble 2.c" -o "bubble 2.o" $(CFLAGS)
