--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main.o "bubble\ 3.o"
-LINKOBJ  = main.o "bubble 3.o"
+OBJ      = "main.c\ \ \ -4.o" "bubble\ 4.o"
+LINKOBJ  = "main.c   -4.o" "bubble 4.o"
 LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -24,8 +24,8 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CC) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-main.o: main.c
-	$(CC) -c main.c -o main.o $(CFLAGS)
+"main.c\ \ \ -4.o": main.c\ \ \ -4.c
+	$(CC) -c "main.c   -4.c" -o "main.c   -4.o" $(CFLAGS)
 
-"bubble\ 3.o": bubble\ 3.c
-	$(CC) -c "bubble 3.c" -o "bubble 3.o" $(CFLAGS)
+"bubble\ 4.o": bubble\ 4.c
+	$(CC) -c "bubble 4.c" -o "bubble 4.o" $(CFLAGS)
